tests/outref/TSIT10.ref
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_FROM_ENTRY : Missing FROM-clause entry for table : N1
Error with syntax near (line 5, column 18):

SELECT *
FROM names n1
FULL JOIN (SELECT *
           FROM names n2
           WHERE n1.id = n2.id
                 ^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_FROM_ENTRY : Missing FROM-clause entry for table : N1
Error with syntax near (line 11, column 18):

SELECT *
FROM names n1
FULL JOIN (SELECT *
           FROM names n2
           WHERE n1.id = n2.id

           UNION

           SELECT *
           FROM names n3
           WHERE n1.id = n3.id
                 ^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT *
FROM names n1
FULL JOIN (SELECT *
           FROM names n2
           WHERE n1.id = n2.id

           UNION

           SELECT *
           FROM names n3
           WHERE n1.id = n3.id
           ) as n4
ON n4.id = n1.id;

